--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <script>
         // Configuração do endpoint do n8n
-        const N8N_WEBHOOK_URL = 'https://yukiomeira.app.n8n.cloud/webhook/analisar-nf';
+        const N8N_WEBHOOK_URL = 'https://grupoindustria.app.n8n.cloud/webhook/analisar-nf';
         
         // Elementos do DOM
         const form = document.getElementById('analysisForm');
